# test_bot

./: .replit  bot.py  main.py  pyproject.toml  run.sh
static/: style.css
static/js/: main.js
templates/: index.html
