[tool.poetry]
name = "pro-speed-test-telegram"
version = "0.1.0"
description = "A speed test tool implemented as a Telegram Mini App."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"
python-telegram-bot = {extras = ["ext"], version = "^20.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
